# VisualAutomationBot

./: App.py  README.md  bot.py  command.py  install.py  json_creater.py  ocr.py  pyproject.toml  run.py  test.txt  window.py  xml_creater.py
.pyenv/: pyvenv.cfg
.pyenv/Scripts/: activate  activate.bat
.pyenv/shims/: idle3.11
.pyenv/versions/3.11.6/include/python3.11/: pyconfig.h
.pyenv/versions/3.11.6/lib/pkgconfig/: python-3.11-embed.pc  python-3.11.pc
.pyenv/versions/3.11.6/lib/python3.11/: _sysconfigdata__linux_x86_64-linux-gnu.py
.pyenv/versions/3.11.6/lib/python3.11/config-3.11-x86_64-linux-gnu/: Makefile  python-config.py
Bluestacks/: config.json  info.json
app/: Window.ui  creater.py  hello.py  t.bat  ui.py  update.bat
docs/: PyDroidBot.drawio  PyDroidKlassendiagramm.drawio  VisualAutomationBot.drawio
docs/Description/: Benutzeroberfläche.md  Erklärung.md  Funktionsweise und Logik.md  JSON.md  Motivation.md  Quellen.md  Visual Automation Bot.md  Zunkunft.md
lib/: Commander.py  Gamer.py  Json_Handler.py  Playset.py  actionset.py  botlib.py  command.py  commander.py  gamer.py  jsonHandler.py  ocr.py  oldBot.py  playset.py  timers.py
oldcode/: botlib.py
raid/: bot.py  config.json  info.json
startrekFC/: config.json  info.json
test/: config.json
würfelkingdom/: config.json  info.json
